--- a/src/components/Todos/TodoForm.module.css
+++ b/src/components/Todos/TodoForm.module.css
@@ -1,3 +1,23 @@
+.form,
 .label-wrap {
-  
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+
+.form {
+  padding: 1rem 2rem;
+  background-color: var(--color-primary);
+}
+
+.label {
+  font-size: 2rem;
+}
+
+.input {
+}
+
+.add-todo-btn {
+  font-size: 1.6rem;
+  font-weight: 700;
 }
