--- a/src/index.css
+++ b/src/index.css
@@ -12,4 +12,12 @@ html {
 main {
   max-width: 120rem;
   margin: 0 auto;
+
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+:root {
+  --color-primary: #cc5de8;
 }
