--- a/src/components/Todos/EditTodo.module.css
+++ b/src/components/Todos/EditTodo.module.css
@@ -1,6 +1,24 @@
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.5);
+  backdrop-filter: blur(4px);
+}
+
 .edit-todo-form {
+  position: fixed;
+  left: 50%;
+  top: 20%;
+  transform: translateX(-50%);
   display: flex;
   gap: 2rem;
+  padding: 2rem 4rem;
+  background-color: #fff;
+  z-index: 1;
+  transition: all 0.5s ease-out;
 }
 
 .label-wrap {
