--- a/src/components/Todos/EditTodo.module.css
+++ b/src/components/Todos/EditTodo.module.css
@@ -17,8 +17,9 @@
   gap: 2rem;
   padding: 2rem 4rem;
   background-color: #fff;
+  box-shadow: 4px 4px 0px var(--color-primary);
   z-index: 1;
-  transition: all 0.5s ease-out;
+  transition: all 0.3s ease-out;
 }
 
 .label-wrap {
@@ -52,8 +53,7 @@
   border: 1px solid var(--color-primary);
   background-color: #fff;
   color: var(--color-primary);
-
-  font-size: 1.6rem;
+  font-size: 2.5rem;
   font-weight: 700;
 }
 
@@ -61,16 +61,24 @@
   background-color: var(--color-primary);
   color: #fff;
 }
+
+.save-btn:focus {
+  outline: 1px solid var(--color-primary);
+}
+
 .cancel-btn {
   border: 1px solid orangered;
   background-color: #fff;
   color: orangered;
-
-  font-size: 1.6rem;
+  font-size: 2.5rem;
   font-weight: 700;
 }
 
 .cancel-btn:hover {
   background-color: orangered;
   color: #fff;
+}
+
+.cancel-btn:focus {
+  outline: 1px solid orangered;
 }
