--- a/src/components/UI/Button.module.css
+++ b/src/components/UI/Button.module.css
@@ -1,4 +1,7 @@
 .button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   padding: 1rem;
   border: 1px solid transparent;
   transition: all 0.2s ease-out;
