--- a/src/components/LoginForm.module.css
+++ b/src/components/LoginForm.module.css
@@ -3,29 +3,33 @@
   align-items: center;
   flex-direction: column;
   gap: 1rem;
-  background-color: violet;
+  border: 1px solid var(--color-primary);
+  box-shadow: 4px 4px var(--color-primary);
   padding: 2rem 4rem;
+  margin: 0 auto;
 }
 
 .label-wrap {
+  width: 100%;
   display: flex;
   align-items: center;
+  justify-content: space-between;
   gap: 1rem;
 }
 
 .label {
-  font-size: 1.6rem;
+  font-size: 2rem;
   font-weight: 700;
 }
 
 .input {
   padding: 1rem;
-  border: 1px solid transparent;
+  border: 1px solid var(--color-primary);
 }
 
 .input:focus {
   outline: none;
-  border: 1px solid darkviolet;
+  border: 1px solid #000;
 }
 
 .invalid {
@@ -36,11 +40,12 @@
 .login-btn {
   font-size: 2.5rem;
   font-weight: 700;
-  background-color: darkviolet;
-  color: #fff;
+  background-color: #fff;
+  border: 1px solid var(--color-primary);
+  color: var(--color-primary);
 }
 
 .login-btn:hover {
-  background-color: #fff;
-  color: darkviolet;
+  background-color: var(--color-primary);
+  color: #fff;
 }
