--- a/src/components/Todos/TodoForm.module.css
+++ b/src/components/Todos/TodoForm.module.css
@@ -8,7 +8,7 @@
 .form {
   padding: 2rem 7rem;
   border: 1px solid var(--color-primary);
-  box-shadow: 4px 4px 0px var(--color-primary);
+  box-shadow: 4px 4px var(--color-primary);
 }
 
 .label {
@@ -18,7 +18,7 @@
 
 .input {
   padding: 1rem;
-  font-size: 1.6rem;
+  font-size: 2rem;
   border: 1px solid var(--color-primary);
 }
 
