--- a/src/components/Todos/NewTodo.module.css
+++ b/src/components/Todos/NewTodo.module.css
@@ -6,7 +6,7 @@
   padding: 1rem 2rem;
   width: 40vw;
   border: 1px solid var(--color-primary);
-  transition: all 0.5s;
+  transition: all 0.5s ease-out;
 }
 
 .title {
