--- a/src/components/Todos/EditTodo.module.css
+++ b/src/components/Todos/EditTodo.module.css
@@ -24,10 +24,10 @@
 }
 
 .showEditForm {
-  animation: showEditForm 0.5s ease-out forwards;
+  animation: show 0.5s ease-out forwards;
 }
 
-@keyframes showEditForm {
+@keyframes show {
   0% {
     opacity: 0;
   }
@@ -39,12 +39,18 @@
 }
 
 .hideEditForm {
-  animation: hideEditForm 1s ease-out forwards;
+  animation: hide 3s ease-out forwards;
+  /* opacity: 0;
+  transition: opacity 3s ease-out; */
 }
 
-@keyframes hideEditForm {
+@keyframes hide {
   0% {
     opacity: 1;
+  }
+
+  50% {
+    opacity: 0.5;
   }
 
   100% {
