--- a/src/components/Todos/EditTodo.module.css
+++ b/src/components/Todos/EditTodo.module.css
@@ -118,3 +118,20 @@
 .cancel-btn:focus {
   outline: 1px solid orangered;
 }
+
+/* 600px = 37.5em */
+@media (max-width: 37.5em) {
+  .edit-todo-form {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .label-wrap {
+    flex-direction: column;
+  }
+
+  .save-btn,
+  .cancel-btn {
+    padding: 0.5rem 2rem;
+  }
+}
